# AOC-2024

./: .gitignore  CMakeLists.txt  build.sh
.cache/clangd/index/: part1.cpp.3AA8E1FD8DDFF44F.idx  utils.cpp.94ACE04716F0341E.idx  utils.h.DC52699903CEB8C3.idx
day01/: part1.cpp  part2.cpp
day02/: part1.cpp  part2.cpp
day03/: part1.cpp  part2.cpp
day04/: part1.cpp  part2.cpp
day05/: part1.cpp  part2.cpp
day06/: part1.cpp  part2.cpp
day07/: part1.cpp  part2.cpp
day08/: part1.cpp  part2.cpp
day09/: part1.cpp  part2.cpp
day10/: part1.cpp  part2.cpp
day11/: part1.cpp  part2.cpp
day12/: part1.cpp  part2.cpp
day13/: part1.cpp  part2.cpp
template/: part1.cpp
utils/: utils.cpp  utils.h
